--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 							</div>
 						</fieldset>
 						<label class="touch__label" for="question">Your question</label>
-						<textarea class="touch__textarea" name="question" id="question" placeholder="Question" required></textarea>
+						<textarea class="touch__textarea" name="question" id="question" placeholder="Question"
+							required></textarea>
 
 						<label class="touch__label touch__check-block" for="checkbox">
 							<input required class="touch__checkbox" type="checkbox" id="checkbox" />
@@ -115,6 +116,38 @@
 				</div>
 			</div>
 			<img src="/src/img/form/vase.png" alt="vase" class="touch__decor">
+		</div>
+	</section>
+
+	<section class="works">
+		<div class="container">
+			<h2 class="title-h2">check out our works</h2>
+			<!-- Slider main container -->
+			<div class="works__wrapper">
+				<div class="swiper works__slider">
+					<!-- Additional required wrapper -->
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-1.jpg" alt="tea-1">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-2.jpg" alt="tea-2">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-3.jpg" alt="tea-3">
+						</div>
+						<div class="swiper-slide">
+							<img src="/src/img/works/tea-2.jpg" alt="tea-2">
+						</div>
+					</div>
+				</div>
+				<!-- If we need pagination -->
+				<div class="swiper-pagination"></div>
+				<!-- If we need navigation buttons -->
+				<button class="icon-left-open works__slider-nav"></button>
+				<button class="icon-right-open works__slider-nav"></button>
+			</div>
 		</div>
 	</section>
 	<script type="module" src="/src/js/script.js"></script>
