--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 		<img src="/src/img/promo/potter.jpg" alt="potter" class="promo__potter">
 		<div class="container">
 			<div class="header">
+				<div class="header__menu">
+					<div class="header__menu-close">
+						<span></span><span></span>
+					</div>
+					<nav class="header__menu-nav">
+						<ul>
+							<li><a href="#" class="header__menu-link">catalog</a></li>
+							<li><a href="#" class="header__menu-link">blog</a></li>
+							<li><a href="#" class="header__menu-link">about</a></li>
+						</ul>
+					</nav>
+				</div>
 				<div class="header__top">
 					<div class="burger">
 						<span></span>
@@ -164,53 +176,53 @@
 						<button class="btn-submit footer__form-btn">submit</button>
 					</form>
 				</div>
-					<div class="footer__links">
-						<div class="footer__links-block">
-							<h2 class="footer__header">discover</h2>
-							<nav class="footer__nav">
-								<ul>
-									<li class="footer__link"><a href="#">About us</a></li>
-									<li class="footer__link"><a href="#">Blog</a></li>
-								</ul>
-							</nav>
-						</div>
-						<div class="footer__links-block">
-							<h2 class="footer__header">shopping</h2>
-							<nav class="footer__nav">
-								<ul>
-									<li class="footer__link"><a href="#">Catalog</a></li>
-								</ul>
-							</nav>
-						</div>
-						<div class="footer__links-block">
-							<h2 class="footer__header">information</h2>
-							<nav class="footer__nav">
-								<ul>
-									<li class="footer__link"><a href="#">Terms and Conditions</a></li>
-								</ul>
-							</nav>
-						</div>
+				<div class="footer__links">
+					<div class="footer__links-block">
+						<h2 class="footer__header">discover</h2>
+						<nav class="footer__nav">
+							<ul>
+								<li class="footer__link"><a href="#">About us</a></li>
+								<li class="footer__link"><a href="#">Blog</a></li>
+							</ul>
+						</nav>
 					</div>
-					<div class="footer__social">
-						<h2 class="footer__header">follow us</h2>
-						<ul class="footer__social-block">
-							<li>
-								<a href="https://www.facebook.com/">
-									<span class="icon-facebook"></span>
-								</a>
-							</li>
-							<li>
-								<a href="https://www.instagram.com/">
-									<span class="icon-instagram"></span>
-								</a>
-							</li>
-							<li>
-								<a href="https://www.pinterest.com/">
-									<span class="icon-pinterest-circled"></span>
-								</a>
-							</li>
-						</ul>
+					<div class="footer__links-block">
+						<h2 class="footer__header">shopping</h2>
+						<nav class="footer__nav">
+							<ul>
+								<li class="footer__link"><a href="#">Catalog</a></li>
+							</ul>
+						</nav>
 					</div>
+					<div class="footer__links-block">
+						<h2 class="footer__header">information</h2>
+						<nav class="footer__nav">
+							<ul>
+								<li class="footer__link"><a href="#">Terms and Conditions</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+				<div class="footer__social">
+					<h2 class="footer__header">follow us</h2>
+					<ul class="footer__social-block">
+						<li>
+							<a href="https://www.facebook.com/">
+								<span class="icon-facebook"></span>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.instagram.com/">
+								<span class="icon-instagram"></span>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.pinterest.com/">
+								<span class="icon-pinterest-circled"></span>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="footer__copyright">© Copyright 2025, Ceramic soul</div>
 		</div>
