--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,124 @@
 </head>
 
 <body>
+    <section class="catalog">
+        <div class="container">
+            <div class="header">
+                <div class="header__menu">
+                    <div class="header__menu-close">
+                        <span></span><span></span>
+                    </div>
+                    <nav class="header__menu-nav">
+                        <ul>
+                            <li><a href="#" class="header__menu-link">catalog</a></li>
+                            <li><a href="#" class="header__menu-link">blog</a></li>
+                            <li><a href="#" class="header__menu-link">about</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__top">
+                    <div class="burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <a href="#" class="header__logo"><img src="/src/logo/logo.png" alt="logo"></a>
+                    <div class="header__icons">
+                        <a href="#"><span class="icon-search"></span></a>
+                        <a href="#"><span class="icon-shopping-bag"></span></a>
+                    </div>
+                </div>
+                <nav class="header__nav">
+                    <ul>
+                        <li><a href="#" class="header__link">catalog</a></li>
+                        <li><a href="#" class="header__link">blog</a></li>
+                        <li><a href="#" class="header__link">about</a></li>
+                    </ul>
+                </nav>
+            </div>
 
+            <h1 class="title-h1 catalog__title">our pottery</h1>
+
+            <div class="catalog__tabs">
+                <button class="catalog__tab catalog__tab_active">for tea</button>
+                <button class="catalog__tab">for kitchen</button>
+                <button class="catalog__tab">for plants</button>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog__content-item">1</div>
+                <div class="catalog__content-item">2</div>
+                <div class="catalog__content-item">3</div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__newsletter">
+                    <h2 class="footer__header">newsletter</h2>
+                    <p class="footer__text">Keep up to date with news and promotions</p>
+                    <form action="#" class="footer__form">
+                        <input type="email" placeholder="Enter your e-mail" required class="footer__input" />
+                        <label class="footer__label footer__check-block" for="footer__checkbox">
+                            <input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
+                            I agree with the <a href="#">terms</a></label>
+                        <button class="btn-submit footer__form-btn">submit</button>
+                    </form>
+                </div>
+                <div class="footer__links">
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">discover</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link"><a href="#">About us</a></li>
+                                <li class="footer__link"><a href="#">Blog</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">shopping</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link"><a href="#">Catalog</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer__links-block">
+                        <h2 class="footer__header">information</h2>
+                        <nav class="footer__nav">
+                            <ul>
+                                <li class="footer__link"><a href="#">Terms and Conditions</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="footer__social">
+                    <h2 class="footer__header">follow us</h2>
+                    <ul class="footer__social-block">
+                        <li>
+                            <a href="https://www.facebook.com/">
+                                <span class="icon-facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/">
+                                <span class="icon-instagram"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.pinterest.com/">
+                                <span class="icon-pinterest-circled"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__copyright">© Copyright 2025, Ceramic soul</div>
+        </div>
+    </footer>
+
+    <script type="module" src="/src/js/script.js"></script>
 </body>
 
 </html>
