--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
                     </div>
                     <nav class="header__menu-nav">
                         <ul>
-                            <li><a href="#" class="header__menu-link">catalog</a></li>
-                            <li><a href="#" class="header__menu-link">blog</a></li>
-                            <li><a href="#" class="header__menu-link">about</a></li>
+                            <li><a href="catalog.html" class="header__menu-link">catalog</a></li>
+                            <li><a href="blog.html" class="header__menu-link">blog</a></li>
+                            <li><a href="about.html" class="header__menu-link">about</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -36,7 +36,7 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <a href="#" class="header__logo"><img src="/src/logo/logo.png" alt="logo"></a>
+                    <a href="index.html" class="header__logo"><img src="/src/logo/logo.png" alt="logo"></a>
                     <div class="header__icons">
                         <a href="#"><span class="icon-search"></span></a>
                         <a href="#"><span class="icon-shopping-bag"></span></a>
@@ -44,13 +44,92 @@
                 </div>
                 <nav class="header__nav">
                     <ul>
-                        <li><a href="#" class="header__link">catalog</a></li>
-                        <li><a href="#" class="header__link">blog</a></li>
-                        <li><a href="#" class="header__link">about</a></li>
+                        <li><a href="catalog.html" class="header__link">catalog</a></li>
+                        <li><a href="blog.html" class="header__link">blog</a></li>
+                        <li><a href="about.html" class="header__link">about</a></li>
                     </ul>
                 </nav>
             </div>
+
+            <h2 class="title-h2 about__title">where it all began</h2>
+            <div class="about__wrapper">
+                <img src="/src/img/about/crafts.jpg" alt="" class="about__img">
+                <div class="about__text-wrapper">
+                    <p class="about__text">Our small pottery workshop began as a simple passion project, rooted in a
+                        love
+                        for
+                        handmade artistry and traditional
+                        craftsmanship. What started with a single wheel and a few lumps of clay has grown into a cozy
+                        creative
+                        space where ideas
+                        take shape and stories are told through every piece. Inspired by timeless techniques and the
+                        beauty
+                        of
+                        natural
+                        materials, we’ve built a place where both beginners and experienced artists can come together,
+                        share
+                        their skills, and
+                        celebrate the art of pottery. Each creation reflects our journey—shaped by hand, fired with
+                        care,
+                        and
+                        made to be
+                        cherished.
+                    </p>
+                    <p class="about__text">Over the years, our workshop has become more than just a place to create—it’s
+                        a
+                        community. Friends, families, and
+                        curious visitors gather here to learn, connect, and experience the joy of working with clay.
+                        From
+                        intimate masterclasses
+                        to collaborative projects, we believe in the power of handmade art to bring people together and
+                        spark
+                        creativity in
+                        unexpected ways.</p>
+                    <p class="about__text">Every piece that leaves our studio carries a bit of our story, blending
+                        tradition
+                        with personal expression. Whether it’s
+                        a simple cup or an intricate vase, our ceramics are crafted to be both beautiful and functional,
+                        adding
+                        warmth and
+                        authenticity to any space.</p>
+                </div>
+            </div>
         </div>
+        <section class="touch">
+            <div class="container">
+                <h2 class="title-h2">get in touch</h2>
+                <div class="pure-g touch__wrapper">
+                    <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-2-5">
+                        <img class="touch__img" src="/src/img/form/tea.jpg" alt="tea" />
+                    </div>
+                    <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
+                        <form class="touch__form" action="#">
+                            <fieldset class="touch__fieldset">
+                                <div class="touch__input-block">
+                                    <label class="touch__label" for="name">Name</label>
+                                    <input class="touch__input" type="text" id="name" name="name" placeholder="Name"
+                                        required />
+                                </div>
+                                <div class="touch__input-block">
+                                    <label class="touch__label" for="email">Email</label>
+                                    <input class="touch__input" type="email" id="email" name="email" placeholder="Email"
+                                        required />
+                                </div>
+                            </fieldset>
+                            <label class="touch__label" for="question">Your question</label>
+                            <textarea class="touch__textarea" name="question" id="question" placeholder="Question"
+                                required></textarea>
+
+                            <label class="touch__label touch__check-block" for="checkbox">
+                                <input required class="touch__checkbox" type="checkbox" id="checkbox" />
+                                I agree with the <a href="#">terms</a></label>
+                            <button class="btn-send touch__btn">send request</button>
+                        </form>
+                    </div>
+                </div>
+                <img src="/src/img/form/vase.png" alt="vase" class="touch__decor">
+            </div>
+        </section>
     </section>
     <footer class="footer">
         <div class="container">
