--- a/about.html
+++ b/about.html
@@ -95,42 +95,58 @@
                 </div>
             </div>
         </div>
-        <section class="touch">
-            <div class="container">
-                <h2 class="title-h2">get in touch</h2>
-                <div class="pure-g touch__wrapper">
-                    <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-2-5">
-                        <img class="touch__img" src="/src/img/form/tea.jpg" alt="tea" />
-                    </div>
-                    <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
-                        <form class="touch__form" action="#">
-                            <fieldset class="touch__fieldset">
-                                <div class="touch__input-block">
-                                    <label class="touch__label" for="name">Name</label>
-                                    <input class="touch__input" type="text" id="name" name="name" placeholder="Name"
-                                        required />
-                                </div>
-                                <div class="touch__input-block">
-                                    <label class="touch__label" for="email">Email</label>
-                                    <input class="touch__input" type="email" id="email" name="email" placeholder="Email"
-                                        required />
-                                </div>
-                            </fieldset>
-                            <label class="touch__label" for="question">Your question</label>
-                            <textarea class="touch__textarea" name="question" id="question" placeholder="Question"
-                                required></textarea>
-
-                            <label class="touch__label touch__check-block" for="checkbox">
-                                <input required class="touch__checkbox" type="checkbox" id="checkbox" />
-                                I agree with the <a href="#">terms</a></label>
-                            <button class="btn-send touch__btn">send request</button>
-                        </form>
-                    </div>
-                </div>
-                <img src="/src/img/form/vase.png" alt="vase" class="touch__decor">
-            </div>
-        </section>
     </section>
+
+    <section class="touch">
+        <div class="container">
+            <h2 class="title-h2">get in touch</h2>
+            <div class="pure-g touch__wrapper">
+                <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-2-5">
+                    <img class="touch__img" src="/src/img/form/tea.jpg" alt="tea" />
+                </div>
+                <div class="pure-u-1 pure-u-xl-1-2 pure-u-xxl-3-5">
+                    <form class="touch__form" action="#">
+                        <fieldset class="touch__fieldset">
+                            <div class="touch__input-block">
+                                <label class="touch__label" for="name">Name</label>
+                                <input class="touch__input" type="text" id="name" name="name" placeholder="Name"
+                                    required />
+                            </div>
+                            <div class="touch__input-block">
+                                <label class="touch__label" for="email">Email</label>
+                                <input class="touch__input" type="email" id="email" name="email" placeholder="Email"
+                                    required />
+                            </div>
+                        </fieldset>
+                        <label class="touch__label" for="question">Your question</label>
+                        <textarea class="touch__textarea" name="question" id="question" placeholder="Question"
+                            required></textarea>
+
+                        <label class="touch__label touch__check-block" for="checkbox">
+                            <input required class="touch__checkbox" type="checkbox" id="checkbox" />
+                            I agree with the <a href="#">terms</a></label>
+                        <button class="btn-send touch__btn">send request</button>
+                    </form>
+                </div>
+            </div>
+            <img src="/src/img/form/vase.png" alt="vase" class="touch__decor">
+        </div>
+    </section>
+
+    <section class="findus">
+        <div class="container">
+            <h2 class="title-h2">find us</h2>
+
+            <div class="findus__wrapper">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d17407.277859378475!2d24.099665!3d56.9503478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfd1742cc3a1%3A0x25408000f2434681!2sThe%20Freedom%20Monument!5e0!3m2!1sen!2slv!4v1766591237797!5m2!1sen!2slv"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
