--- a/about.html
+++ b/about.html
@@ -121,10 +121,12 @@
                         <label class="touch__label" for="question">Your question</label>
                         <textarea class="touch__textarea" name="question" id="question" placeholder="Question"
                             required></textarea>
+                        <div class="error-message"></div>
 
                         <label class="touch__label touch__check-block" for="checkbox">
                             <input required class="touch__checkbox" type="checkbox" id="checkbox" />
                             I agree with the <a href="#">terms</a></label>
+                        <div class="checkbox-error-message"></div>
                         <button class="btn-send touch__btn">send request</button>
                     </form>
                 </div>
@@ -154,10 +156,14 @@
                     <h2 class="footer__header">newsletter</h2>
                     <p class="footer__text">Keep up to date with news and promotions</p>
                     <form action="#" class="footer__form">
-                        <input type="email" placeholder="Enter your e-mail" required class="footer__input" />
+                        <input type="email" placeholder="Enter your e-mail" required class="footer__input"
+                            id="footer__email" />
+                        <div class="email-error-message"></div>
                         <label class="footer__label footer__check-block" for="footer__checkbox">
                             <input required class="footer__checkbox" type="checkbox" id="footer__checkbox" />
-                            I agree with the <a href="#">terms</a></label>
+                            I agree with the <a href="#">terms</a>
+                        </label>
+                        <div class="checkbox-error-message"></div>
                         <button class="btn-submit footer__form-btn">submit</button>
                     </form>
                 </div>
