--- a/blog.html
+++ b/blog.html
@@ -24,9 +24,9 @@
                     </div>
                     <nav class="header__menu-nav">
                         <ul>
-                            <li><a href="catalog.html" class="header__menu-link">catalog</a></li>
-                            <li><a href="blog.html" class="header__menu-link">blog</a></li>
-                            <li><a href="about.html" class="header__menu-link">about</a></li>
+                            <li><a href="/catalog.html" class="header__menu-link">catalog</a></li>
+                            <li><a href="/blog.html" class="header__menu-link">blog</a></li>
+                            <li><a href="/about.html" class="header__menu-link">about</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -44,9 +44,9 @@
                 </div>
                 <nav class="header__nav">
                     <ul>
-                        <li><a href="catalog.html" class="header__link">catalog</a></li>
-                        <li><a href="blog.html" class="header__link">blog</a></li>
-                        <li><a href="about.html" class="header__link">about</a></li>
+                        <li><a href="/catalog.html" class="header__link">catalog</a></li>
+                        <li><a href="/blog.html" class="header__link">blog</a></li>
+                        <li><a href="/about.html" class="header__link">about</a></li>
                     </ul>
                 </nav>
             </div>
@@ -124,8 +124,8 @@
                         <h2 class="footer__header">discover</h2>
                         <nav class="footer__nav">
                             <ul>
-                                <li class="footer__link"><a href="#">About us</a></li>
-                                <li class="footer__link"><a href="#">Blog</a></li>
+                                <li class="footer__link"><a href="/about.html">About us</a></li>
+                                <li class="footer__link"><a href="/blog.html">Blog</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -133,7 +133,7 @@
                         <h2 class="footer__header">shopping</h2>
                         <nav class="footer__nav">
                             <ul>
-                                <li class="footer__link"><a href="#">Catalog</a></li>
+                                <li class="footer__link"><a href="/catalog.html">Catalog</a></li>
                             </ul>
                         </nav>
                     </div>
